@@ -142,7 +142,11 @@ def wkt2peril(fname, name, sitecol):
         if header != 'geom\n':
             raise ValueError('%s has header %r, should be geom instead' %
                              (fname, header))
-        geom = shapely.wkt.loads(f.read().strip('"'))  # strip quotes
+        wkt = f.read()
+        if not wkt.startswith('"'):
+            raise ValueError('The geometry must be quoted in %s: "%s..."' %
+                             (fname, wkt.split('(')[0]))
+        geom = shapely.wkt.loads(wkt.strip('"'))  # strip quotes
     peril = numpy.zeros(len(sitecol), float)
     for sid, lon, lat in sitecol.complete.array[['sids', 'lon', 'lat']]:
         peril[sid] = shapely.geometry.Point(lon, lat).within(geom)
